# RoamingPhotobooth

./: .gitignore  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/roamingphotobooth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ptp_bridge.cpp
app/src/main/java/com/example/roamingphotobooth/: MainActivity.kt
app/src/main/java/com/example/roamingphotobooth/drive/: DriveAuth.kt  DriveUploader.kt
app/src/main/java/com/example/roamingphotobooth/nav/: AppNav.kt
app/src/main/java/com/example/roamingphotobooth/network/: PrintServerClient.kt
app/src/main/java/com/example/roamingphotobooth/print/: ActivePrintJobTracker.kt  PrintJobStatus.kt  PrintJobWebSocketClient.kt  PrintServerConnectionManager.kt  PrintServerDiscovery.kt  PrintServerHostInterceptor.kt  PrintServerInfo.kt  PrintServerRepository.kt
app/src/main/java/com/example/roamingphotobooth/ptp/: BitmapMerger.kt  NativePtpBridge.kt  PtpConstants.kt  PtpContainer.kt  PtpDeviceManager.kt  PtpNativeConnection.kt.kt  PtpSessionManager.kt
app/src/main/java/com/example/roamingphotobooth/settings/: PrinterSettingsScreen.kt  SettingsActivity.kt  SettingsNavDropdown.kt  SettingsSection.kt
app/src/main/java/com/example/roamingphotobooth/template/: FrameFileManager.kt  PhotoTemplate.kt  SlotColorPalette.kt  SlotEditorBox.kt  (+7 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  network_security_config.xml
app/src/test/java/com/example/roamingphotobooth/: ExampleUnitTest.kt
(+11 files in other folders)
